--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/reset-css/reset.css">
+  <link rel=" stylesheet" type="text/css" href="css/style.css">
+  <title>Apple</title>
+  <script src="https://kit.fontawesome.com/fc8cc3c5c9.js"></script>
 </head>
+
 <body>
-    
+  <div class="jumbotron">
+    <nav class="nav">
+      <a class="nav-item" href="#"><i class="fab fa-apple"></i></a>
+      <a class="nav-item" href="#">Store</a>
+      <a class="nav-item" href="#">Mac</a>
+      <a class="nav-item" href="#">iPod</a>
+      <a class="nav-item" href="#">iPhone</a>
+      <a class="nav-item" href="#">iPad</a>
+      <a class="nav-item" href="#">iTunes</a>
+      <a class="nav-item" href="#">Support</a>
+      <form class="nav-item" action="index.html" method="post">
+        <input class="form-control" type="text" name="search">
+      </form>
+    </nav>
+
+    <!-- <h1 class="jumbotron-header">What will your verse be?</h1> -->
+    <img width="1000" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small_2x.png" alt="Jumbotron title">
+    <img width="900" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small_2x.png" alt="Jumbotron subtitle">
+    <a class="play-film" href="#">Watch the "Your Verse" film and explore the stories &nbsp;&nbsp;<i class="far fa-play-circle"></i></a>
+  </div>
 </body>
+
 </html>
