Moved inline styles external stylesheet

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         </form>
       </nav>
 
-      <!-- <h1 class="jumbotron-header">What will your verse be?</h1> -->
-      <img width="1000" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small_2x.png" alt="Jumbotron title">
-      <img width="900" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small_2x.png" alt="Jumbotron subtitle">
+      <img class="jumbotron-title" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small_2x.png" alt="Jumbotron title">
+      <img class="jumbotron-subtitle" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small_2x.png" alt="Jumbotron subtitle">
       <a class="play-film" href="#">Watch the "Your Verse" film and explore the stories &nbsp;&nbsp;<i class="far fa-play-circle"></i></a>
     </div>
   </header>
